Stadistics modify. Edit Alumno. Add Beca

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,12 @@ hello=hola,properties
 signupSuccess=Registro exitoso 
 usuarioNoUnico=El usuario ya existe
 pagoSuccess=El pago se ha registrado
-pagoNoSuccess=Ocurrió un error al registrar el mensage: {0}
+pagoNoSuccess=Ocurri&oacute; un error al registrar el mensage: {0}
+pagoGradoSuccess=El pago se registr&oacute; en el grado de manera correcta
+pagoGradoNoSuccess=Ocurri&oacute; un error al registrar el pago con el grado: {0}
+alumnoUpdateSuccess=El alumno se actualiz&oacute; correctamente
+alumnoUpdateNoSuccess=Ocurri&oacute; un error al actualizar el alumno: {0}
+
+alumnoSaveBecaPorcentajeError=El porcentaje de beca no pede ser mayor al 100%
+alumnoSaveBecaSuccess=La beca se ha guardado correctamente
+alumnoSaveBecaNoSuccess=Ocurri&oacute; un error al guardar la beca: {0}
