Mensajes de errores

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,6 @@ gradoNoSuccess=Ocurri&oacute; un error al agregar el grado: {0}
 gradoPagoUpdateSuccess=El pago se ha establecido al grado de manera exitosa
 gradoPagoUpdateNoSuccess=Ocurri&oacute; un error al agregar el pago: {0}
 gradoPagoUpdateParcialSuccess=El pago no se agreg&oacute; en los siguientes meses: {0}
+
+catPagoDeleteSuccess=El pago {0} se ha borrado correctamente
+catPagoDeleteNoSuccess=No es posible borrar el pago. Se encuentra asociado a un grado
