Add discounts to students

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,9 @@ alumnoSaveNoSuccess=Ocurri&oacute; un error al guardar el alumno: {0}
 alumnoSaveBecaPorcentajeError=El porcentaje de beca no pede ser mayor al 100%
 alumnoSaveBecaSuccess=La beca se ha guardado correctamente
 alumnoSaveBecaNoSuccess=Ocurri&oacute; un error al guardar la beca: {0}
+alumnoSaveDescuentoSuccess=El descuento se ha guardado correctamente
+alumnoSaveDescuentoBecaError=El alumno tiene una beca. Por lo tanto no puede ser asignado un descuento
+alumnoSaveDescuentoNoSuccess=Ocurri&oacute; un error al guardar el descuento: {0}
 
 gradoUpdateSuccess=El nombre de grado se actualiz&oacute; correctamente
 gradoUpdateNoSuccess=Ocurri&oacute; un error al actualizar el nombre del grado: {0}
